--- a/survey.html
+++ b/survey.html
@@ -9,8 +9,8 @@
   <body>
     <form method="POST", action = "/survey-add">
     <p>Name: <input type="text" name="name"></p>
-    <p>UNI: <input type="text" name="name"></p>
-    <p>Major: <input type="text" name="name"></p>
+    <p>UNI: <input type="text" name="uni"></p>
+    <p>Major: <input type="text" name="major"></p>
     <p>Year: <select name="year">
     <option>freshman</option>
     <option>sophomore</option>
@@ -19,27 +19,27 @@
     </select></p>
     <div class="slidecontainer" id="slide_container_f">
     <p>Social:<span id="demo"></span></p>
-    <input type="range" min=1 max=100 class="slider" 
+    <input type="range" min=1 max=100 class="slider"
         id="myRange" name="social">
     </div>
     <div class="slidecontainer" id="slide_container_f">
     <p>Professional:<span id="demo"></span></p>
-    <input type="range" min=1 max=100 class="slider" 
+    <input type="range" min=1 max=100 class="slider"
         id="myRange" name="professional">
     </div>
     <div class="slidecontainer" id="slide_container_f">
     <p>Educational:<span id="demo"></span></p>
-    <input type="range" min=1 max=100 class="slider" 
+    <input type="range" min=1 max=100 class="slider"
         id="myRange" name="educational">
     </div>
     <div class="slidecontainer" id="slide_container_f">
     <p>Relaxing:<span id="demo"></span></p>
-    <input type="range" min=1 max=100 class="slider" 
+    <input type="range" min=1 max=100 class="slider"
         id="myRange" name="relaxing">
     </div>
     <div class="slidecontainer" id="slide_container_f">
     <p>Athletic:<span id="demo"></span></p>
-    <input type="range" min=1 max=100 class="slider" 
+    <input type="range" min=1 max=100 class="slider"
         id="myRange" name="athletic">
     </div>
     <input type="submit" value="Submit">
