--- a/survey.html
+++ b/survey.html
@@ -12,7 +12,7 @@
     <p>UNI: <input type="text" name="uni"></p>
     <p>Major: <input type="text" name="major"></p>
     <p>Year: <select name="year">
-    <option>freshman</option>
+    <option>freshman</option>.
     <option>sophomore</option>
     <option>junior</option>
     <option>senior</option>
